--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -192,6 +192,31 @@ body {
         justify-content: space-between;
         padding: 0px 10px 0px 10px;
 
+        // .cart {
+        //   margin-top: -4px;
+        //   .shopping-backet {
+        //     color: #ffffff;
+        //     text-transform: uppercase;
+        //     text-decoration: none;
+        //     font-family: 'K2D', sans-serif;
+        //     font-size: 14px;
+        //     font-weight: 200;
+        //     text-transform: uppercase;
+        //     .fas {
+        //       color: #ffffff;
+        //       font-size: 24px;
+        //       padding-right: 5px;
+        //     }
+        //   }
+        //   .shopping-backet:hover {
+        //     cursor: pointer;
+        //     color: rgb(255, 176, 5);
+        //   }
+        //   .shopping-backet:hover .fas {
+        //     cursor: pointer;
+        //     color: rgb(255, 176, 5);
+        //   }
+        // }
         .cart {
           margin-top: -4px;
           .shopping-backet {
@@ -202,17 +227,24 @@ body {
             font-size: 14px;
             font-weight: 200;
             text-transform: uppercase;
-            .fas {
+            display: flex;
+            .img_basket {
+              height: 40px;
+              width: 55px;
+              margin-top: 5px;
+            }
+            .text_basket {
+              margin-top: 15px;
               color: #ffffff;
-              font-size: 24px;
-              padding-right: 5px;
+              font-size: 14px;
+              padding-right: -8px; 
             }
           }
           .shopping-backet:hover {
             cursor: pointer;
             color: rgb(255, 176, 5);
           }
-          .shopping-backet:hover .fas {
+          .shopping-backet:hover .text_basket{
             cursor: pointer;
             color: rgb(255, 176, 5);
           }
@@ -541,12 +573,12 @@ body {
         font-size: 18px;
         // color: #fff;
       }
-      .dws-menu > ul li:first-child {
-        border-left: 1px solid #b2b3b5;
-      }
-      .dws-menu > ul  li:last-child {
-        border-right: 1px solid #babbbb;
-      }
+      // .dws-menu > ul li:first-child {
+      //   border-left: 1px solid #b2b3b5;
+      // }
+      // .dws-menu > ul  li:last-child {
+      //   border-right: 1px solid #babbbb;
+      // }
       .dws-menu li a:hover {
         background: rgb(192, 129, 236); /////////////////////
 
