--- a/src/styles/main-media.less
+++ b/src/styles/main-media.less
@@ -1,3 +1,6 @@
+
+///////////////////// начало нижнее меню
+
 @media (min-width: 797px) and (max-width: 3500px) {
   body {
     display: flex;
@@ -7,7 +10,6 @@
     padding: 0;
     flex-direction: column;
     align-items: center;
-   
     header {
       padding: 0;
       margin: 0;
@@ -40,60 +42,85 @@
           // width: 700px;
           // float: left;
         }
-        .nav-menu ul {
-         
-          
-        }
         .nav-menu ul li {
           // list-style: none;
           float: left;
           // margin: 20px;
         }
-        
         .nav-menu ul li a {
           text-decoration: none;
           color: white;
         }
         .nav-menu ul li a:hover {
-          color: #00ffee; /// работает
+          color: #000000; /// работает
         }
         .nav-menu ul li ul {
           flex-direction: column;///
           width: 100%;
-          max-width: 1160px;
-          // min-height: 200px;
-          // width: 1000px;
-          min-height: 250px;
-          position: fixed;
-          
-          // position: absolute;
-          // left: 158px;
-          // top: 105px;
-          background: black;
+          max-width: 1060px; ///////////////////////// длинна блока///////
+          min-height: 40px;/////////////////////высота /////////
+          position: fixed;//////////по центру//////////
+          margin: auto;//////////по центру////////////
+          left: 0;///////////по центру////////////
+          right: 0;///////////по центру//////////////////
+          background: rgb(214, 216, 226);
           overflow: hidden;
           transition: 0.3s;
-          // flex-wrap: wrap;
-          margin-left: 0px;
-          
-          
-        } 
+          // padding: 7px; 
+        }
         .nav-menu ul li ul li {
           padding: 5px;
-          border: 0;
+          left: 5px; ///////////////////////////////////// отступ///////////
+        }
+        .nav-menu ul li ul li {
+          // background: yellowgreen;
+          margin-right: 0px; /////////////////////////////////
+          margin-bottom: 5px;
+          margin-right: 5px;
+          border: none; 
         }
         .nav-menu ul li ul li a{
-          width: 270px;
+          width: 245px;
+          padding: 2px 5px 2px 10px;
+          // padding: 5px 25px 5px 25px;
+          border: 1px solid rgb(253, 58, 58);
+          border-left: 6px solid red;
           text-transform: uppercase;
-          
+          webkit-transform: skewX(-15deg); 
+	        -moz-transform: skewX(-15deg); 
+	        -ms-transform: skewX(-15deg); 
+	        -o-transform: skewX(-15deg); 
+          transform: skewX(-15deg); 
+          box-shadow: 5px 5px #000000;
+          font-size: 13px;
+          border-radius: 2px;  
         }
-        .nav-menu ul li  ul li ul li{
+        .nav-menu ul li  ul li ul li {
           display: none;
         }
-
+        .nav-menu ul li  ul li ul {
+          position: absolute;
+          top: -350px;
+        }
       }
     }
   }
 }
+
+
+@media (min-width: 797px) and (max-width: 1049px) {
+  body {
+    header {
+      .headerThree-menu {
+        .nav-menu ul li ul {
+          max-width: 800px; ///////////////////////// длинна блока///////
+        }
+      }
+    }
+  }
+}
+
+///////////////////// конец нижнее меню
 
 
 
@@ -126,8 +153,7 @@ body {
         font-size: 14px;
         cursor: pointer;
         position: relative;
-        color: #fff;
-        
+        color: #fff; 
       }
       .dws-menu label.toggleMenu .fa {
         position: absolute;
@@ -147,8 +173,7 @@ body {
     header {
       .headerThree-menu {
         .dws-menu {
-          overflow: hidden;
-          
+          overflow: hidden;  
         }
         .dws-menu ul {
           // display: none;
@@ -162,8 +187,7 @@ body {
           top: auto;
         }
         .dws-menu label.toggleMenu {
-          display: block;
-         
+          display: block; 
         }
         .dws-menu input.toggleMenu:checked + label.toggleMenu {
           // background: rgb(63, 22, 22);
@@ -173,23 +197,21 @@ body {
           background: -webkit-linear-gradient(top,  #eeeeee 0%,#cccccc 100%); /* Chrome10-25,Safari5.1-6 */
           background: linear-gradient(to bottom,  #eeeeee 0%,#cccccc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
           filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
-          color: black;
-          
+          color: black; 
         }
         .dws-menu input.toggleMenu:checked ~ ul {
           display: block;
           position: relative;
-          max-height: 5000px;
+          max-height: 3000px;
           transition: max-height 2s ease-in;
         } 
-        
         .dws-menu input.toggleSubmenu:checked ~ ul {
           display: block;
           position: relative;
-          max-height: 5000px;
+          max-height: 30000px;
+          
           transition: max-height 2s ease-in;
         }
-
         .dws-menu label.toggleSubmenu {
           position: absolute;
           top: 0;
@@ -200,9 +222,6 @@ body {
           display: block;
         }
         .dws-menu ul li input.toggleSubmenu:checked ~ a {
-          // background: #454547;
-          // background: rgb(88, 29, 29);
-          // color: #fff;
           /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#eeeeee+0,cccccc+100;Gren+3D */
           background: #eeeeee; /* Old browsers */
           background: -moz-linear-gradient(top,  #eeeeee 0%, #cccccc 100%); /* FF3.6-15 */
@@ -210,14 +229,12 @@ body {
           background: linear-gradient(to bottom,  #eeeeee 0%,#cccccc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
           filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
           color: black;
-          
         }
         .dws-menu label.toggleSubmenu .fa:before {
           // content: "\f078";
           content: "\f07b";
           color: #ffa920;
-          font-size: 25px;
-          
+          font-size: 25px; 
         }
         .dws-menu label.toggleSubmenu .fa {
           position: absolute;
@@ -311,7 +328,7 @@ body {
 
 
 
-@media (min-width: 380px) and (max-width: 695px) {
+@media (min-width: 317px) and (max-width: 695px) {
   body {
     header {
       .headerOne {
@@ -334,9 +351,7 @@ body {
           background: -moz-linear-gradient(top,  rgba(181,189,200,1) 1%, rgba(181,189,200,1) 3%, rgba(48,54,58,1) 60%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%); /* FF3.6-15 */
           background: -webkit-linear-gradient(top,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* Chrome10-25,Safari5.1-6 */
           background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
-      
-          
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */         
           // background: #555454;
           position: relative;
           // color: white;
@@ -408,7 +423,6 @@ body {
                 // background: #000;
                 background: #646464;
                 // padding-bottom: 2px;
-
               }
               .mobile-menu-a:hover {
                 font-family: 'K2D', sans-serif;
@@ -439,7 +453,44 @@ body {
           #check-menu:checked ~ .fourth {
             display: none;
           }
-
+        }
+        .cart-block {
+          padding: 0px 10px 0px 1px;
+          margin-right: -10px;
+          .shopping-backet {
+            color: #ffffff;
+            text-transform: uppercase;
+            text-decoration: none;
+            font-family: 'K2D', sans-serif;
+            font-size: 14px;
+            font-weight: 200;
+            text-transform: uppercase;
+            display: flex;
+            .img_basket {
+              height: 40px;
+              width: 55px;
+              margin-top: 5px;
+              
+            }
+            .text_basket {
+              // display: none;
+              margin-top: 15px;
+              color: #ffffff;
+              font-size: 14px;
+              padding-right: -8px;
+              
+            }
+          }
+          .shopping-backet:hover {
+            cursor: pointer;
+            color: rgb(255, 176, 5);
+          }
+          .shopping-backet:hover .img_basket {
+            
+            border: 2px solid red;
+            border-radius: 50%;
+            padding: 0;
+          }
         }
       }
     }    
