--- a/src/styles/main-media.less
+++ b/src/styles/main-media.less
@@ -328,7 +328,7 @@ body {
 
 
 
-@media (min-width: 317px) and (max-width: 695px) {
+@media (min-width: 380px) and (max-width: 695px) {
   body {
     header {
       .headerOne {
@@ -336,7 +336,7 @@ body {
         justify-content: space-around;
         // flex-wrap: nowrap;
         // align-items: center;
-        height: 35px;
+        height: 40px;
         width: 100%;
         max-width: 1260px;
         // background: #646464;
@@ -356,7 +356,7 @@ body {
           position: relative;
           // color: white;
           text-align: center;
-          height: 35px;///
+          height: 40px;//////////////////
           margin-left: -5px;
           width: 115px;
           // border: 1px solid rgb(0, 0, 0);
@@ -365,6 +365,7 @@ body {
           font-size: 14px;
           font-family: 'K2D', sans-serif;
           font-weight: 400;
+          text-align: center;////////////////
           #check-menu {
             display: none;  
           }
@@ -379,7 +380,11 @@ body {
             z-index: 2;
             line-height: 35px;
             margin-left: 10px; 
+          }
+          .check-menu-label:hover {
+            color: rgb(255, 176, 5); ////  
           } 
+          
           .burger_line {
             position: absolute;
             top: 7px;
@@ -389,13 +394,19 @@ body {
             background: #fff;
             left: 12px;
           }
-          .second, .third {
-            top: 15px;
-            left: 12px;
-          }
-          .fourth {
-            top: 24px;
-          }
+          .check-menu-label:hover ~ div {
+            background: rgb(255, 176, 5); //// 
+          } 
+          .second, .third {////////////////////
+            top: 16px;//////////////////////////////
+            left: 12px;////////////////////////////////
+          }/////////////////////////////
+          .fourth {///////////////////////////////
+            top: 25px;//////////////////////////////
+          }/////////////////////////////////
+          .first {////////////////////////////////
+            top: 8px;///////////////////////////////
+          }///////////////////////////////////////////////
           .main-menu {
             display: block;
             position: absolute;
@@ -467,27 +478,28 @@ body {
             text-transform: uppercase;
             display: flex;
             .img_basket {
-              height: 40px;
-              width: 55px;
+              height: 38px;
+              width: 58px;
               margin-top: 5px;
               
             }
             .text_basket {
-              // display: none;
               margin-top: 15px;
               color: #ffffff;
               font-size: 14px;
-              padding-right: -8px;
+              margin-bottom: 12px;
+              margin-left: 5px;
               
             }
           }
-          .shopping-backet:hover {
+          .shopping-backet:hover .text_basket {
             cursor: pointer;
             color: rgb(255, 176, 5);
           }
           .shopping-backet:hover .img_basket {
-            
-            border: 2px solid red;
+            cursor: pointer;
+            background: rgb(255, 176, 5);
+            border: 2px solid rgb(78, 77, 77);
             border-radius: 50%;
             padding: 0;
           }
@@ -497,4 +509,165 @@ body {
   }
 }
 
-
+@media (min-width: 317px) and (max-width: 379px) {
+  body {
+    header {
+      .headerOne {
+        .wrapper {
+          // margin: 200px auto;
+          // width: 200px;
+          
+          /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
+          background: rgb(181,189,200); /* Old browsers */
+          background: -moz-linear-gradient(top,  rgba(181,189,200,1) 1%, rgba(181,189,200,1) 3%, rgba(48,54,58,1) 60%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%); /* FF3.6-15 */
+          background: -webkit-linear-gradient(top,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* Chrome10-25,Safari5.1-6 */
+          background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */         
+          // background: #f50d0d; 
+          position: relative;
+          // color: white;
+          text-align: center;
+          height: 40px;////////////////////////////////////////
+          margin-left: -14px; //////////////////////////////////////
+          width: 115px;
+          // border: 1px solid rgb(0, 0, 0);
+          // border-radius: 5px;
+          color: #FFFFFF;
+          font-size: 14px;
+          font-family: 'K2D', sans-serif;
+          font-weight: 400;
+          text-align: center;////////////////////////////////////
+          #check-menu {
+            display: none;  
+          }
+          .check-menu-label {
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            cursor: pointer;
+            z-index: 2;
+            line-height: 35px;
+            margin-left: 10px; 
+          } 
+          .burger_line {
+            position: absolute;
+            top: 7px;
+            right: 10px;
+            width: 20px;
+            height: 2px;
+            background: #fff;
+            left: 12px;
+          }
+          .second, .third {
+            top: 16px;
+            left: 12px;
+          }
+          .fourth {
+            top: 25px;
+          }
+          .first {
+            top: 8px;
+          }
+          .main-menu {
+            display: block;
+            position: absolute;
+            width: 100%;
+            bottom: 0;
+            left: 0;
+            transform: translateY(100%);
+            max-height: 0;
+            font-size: 0;
+            overflow: hidden;
+            transition: .5s all;
+            width: 200px;
+            .mobile-menu-li {
+              // width: 220px;
+              text-align: center;
+              // padding-left: -14px;
+              // padding-right: -14px;
+              .mobile-menu-a {
+                display: block;
+                width: 100%;
+                padding: 8px;
+                color: white;
+                text-decoration: none;
+                border-top: 3px solid rgba(247, 245, 245, 0.3);
+                // background: #000;
+                background: #646464;
+                // padding-bottom: 2px;
+              }
+              .mobile-menu-a:hover {
+                font-family: 'K2D', sans-serif;
+                font-weight: 400;
+                color: rgb(7, 253, 220);
+                border-bottom: 4px solid rgb(10, 196, 171); 
+                // padding-bottom: 3px;
+              }
+            }  
+          }
+          #check-menu:checked ~ .main-menu {
+            max-height: 400px;
+            font-size: 14px;
+          }
+          #check-menu:checked ~ .first {
+            display: none;
+          }
+          #check-menu:checked ~ .second {
+            transform: rotate(225deg);
+            transition: 1s;
+            background: rgb(7, 253, 220);
+          }
+          #check-menu:checked ~ .third {
+            transform: rotate(-225deg);
+            transition: 1s;
+            background: rgb(7, 253, 220);
+          }  
+          #check-menu:checked ~ .fourth {
+            display: none;
+          }
+        }
+        .cart-block {
+          // padding: 0px 10px 0px 1px;
+          // margin-right: -10px;
+          .shopping-backet {
+            // color: #ffffff;
+            // text-transform: uppercase;
+            // text-decoration: none;
+            // font-family: 'K2D', sans-serif;
+            // font-size: 14px;
+            // font-weight: 200;
+            // text-transform: uppercase;
+            // display: flex;
+            .img_basket {
+              // height: 38px;
+              // width: 58px;
+              // margin-top: 5px;
+              
+            }
+            .text_basket {
+              
+              // margin-top: 15px;
+              // color: #ffffff;
+              // font-size: 14px;
+              // padding-right: -8px;
+              display: none; /////////////
+            }
+          }
+          // .shopping-backet:hover {
+          //   cursor: pointer;
+          //   color: rgb(255, 176, 5);
+          // }
+          // .shopping-backet:hover .img_basket {
+            
+          //   border: 2px solid red;
+          //   border-radius: 50%;
+          //   padding: 0;
+          // }
+        }
+      }
+    }  
+  }  
+}
