--- a/src/styles/main-media.less
+++ b/src/styles/main-media.less
@@ -3,49 +3,13 @@
 
 @media (min-width: 797px) and (max-width: 3500px) {
   body {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 0;
-    margin: 0;
-    padding: 0;
-    flex-direction: column;
-    align-items: center;
     header {
-      padding: 0;
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      min-height: 230px;
-      width: 100%;
-      max-width: 1260px;
-      justify-content: space-around;
-      background: rgb(0, 204, 255);
       .headerThree-menu {
-        font-family: 'K2D', sans-serif;
-        font-weight: 400;
-        height: 36px;
-        // width: 100%;
-        max-width: 1260px;
-        // background: rgb(211, 65, 65);
-        /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
-        background: rgb(181,189,200); /* Old browsers */
-        background: -moz-linear-gradient(top,  rgba(181,189,200,1) 1%, rgba(181,189,200,1) 3%, rgba(48,54,58,1) 60%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(top,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
-        .dws-menu * {
-          margin: 0;
-          padding: 0;  
-        }
         .nav-menu {
           max-width: 1260px;
-          // width: 700px;
-          // float: left;
         }
         .nav-menu ul li {
-          // list-style: none;
           float: left;
-          // margin: 20px;
         }
         .nav-menu ul li a {
           text-decoration: none;
@@ -63,7 +27,7 @@
           margin: auto;//////////по центру////////////
           left: 0;///////////по центру////////////
           right: 0;///////////по центру//////////////////
-          background: rgb(214, 216, 226);
+          background: rgb(125, 175, 209); ////////////////////////////////фон
           overflow: hidden;
           transition: 0.3s;
           // padding: 7px; 
@@ -93,6 +57,8 @@
           transform: skewX(-15deg); 
           box-shadow: 5px 5px #000000;
           font-size: 13px;
+          font-family: 'K2D', sans-serif;
+          font-weight: 600;
           border-radius: 2px;  
         }
         .nav-menu ul li  ul li ul li {
@@ -265,57 +231,12 @@ body {
   body {
     header {
       .headerOne {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        // flex-wrap: nowrap;
-        
-        height: 40pxpx;
-        width: 100%;
-        max-width: 1260px;
-        // background: #ee3939;
         padding-left: 10px; //
         padding-right: 10px; //
         .wrapper {
           margin-left: -24px;
-          #check-menu {
-            display: none;
-          }
-          .check-menu-label {
-            display: none;
-          } 
-          .burger_line {
-            display: none;
-          }
           .main-menu {
             width: 420px; //
-            // background: yellowgreen;
-            list-style: none;
-            text-transform: uppercase;
-            display: flex;
-            padding: 0;
-           
-            justify-content: space-between;
-            .mobile-menu-li {
-              // padding-left: 14px;
-              // padding-right: 14px;
-              .mobile-menu-a{
-                color: #FFFFFF;
-                font-size: 14px;
-                // text-decoration: none;
-                font-family: 'K2D', sans-serif;
-                font-weight: 400;
-                padding: 11px 10px 11px 10px;
-                // background: red; 
-              }
-              // .mobile-menu-a:hover {
-              //   font-family: 'K2D', sans-serif;
-              //   font-weight: 400;
-              //   color: rgb(7, 253, 220);
-              //   border-bottom: rgb(7, 253, 220) solid 2px;
-              //   // padding-bottom: 3px;
-              // }
-            }  
           }
         }
       }
@@ -332,19 +253,9 @@ body {
   body {
     header {
       .headerOne {
-        display: flex;
-        justify-content: space-around;
-        // flex-wrap: nowrap;
-        // align-items: center;
-        height: 40px;
-        width: 100%;
-        max-width: 1260px;
-        // background: #646464;
         padding-left: 10px; //
         padding-right: 10px; //
         .wrapper {
-          // margin: 200px auto;
-          // width: 200px;
           
           /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
           background: rgb(181,189,200); /* Old browsers */
@@ -354,21 +265,15 @@ body {
           filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */         
           // background: #555454;
           position: relative;
-          // color: white;
           text-align: center;
           height: 40px;//////////////////
           margin-left: -5px;
           width: 115px;
-          // border: 1px solid rgb(0, 0, 0);
-          // border-radius: 5px;
           color: #FFFFFF;
           font-size: 14px;
           font-family: 'K2D', sans-serif;
           font-weight: 400;
           text-align: center;////////////////
-          #check-menu {
-            display: none;  
-          }
           .check-menu-label {
             display: block;
             position: absolute;
@@ -384,8 +289,8 @@ body {
           .check-menu-label:hover {
             color: rgb(255, 176, 5); ////  
           } 
-          
           .burger_line {
+            display: block;
             position: absolute;
             top: 7px;
             right: 10px;
@@ -420,10 +325,7 @@ body {
             transition: .5s all;
             width: 200px;
             .mobile-menu-li {
-              // width: 220px;
               text-align: center;
-              // padding-left: -14px;
-              // padding-right: -14px;
               .mobile-menu-a {
                 display: block;
                 width: 100%;
@@ -431,16 +333,6 @@ body {
                 color: white;
                 text-decoration: none;
                 border-top: 3px solid rgba(247, 245, 245, 0.3);
-                // background: #000;
-                background: #646464;
-                // padding-bottom: 2px;
-              }
-              .mobile-menu-a:hover {
-                font-family: 'K2D', sans-serif;
-                font-weight: 400;
-                color: rgb(7, 253, 220);
-                border-bottom: 4px solid rgb(10, 196, 171); 
-                // padding-bottom: 3px;
               }
             }  
           }
@@ -467,55 +359,20 @@ body {
         }
         .cart-block {
           padding: 0px 10px 0px 1px;
-          margin-right: -10px;
-          .shopping-backet {
-            color: #ffffff;
-            text-transform: uppercase;
-            text-decoration: none;
-            font-family: 'K2D', sans-serif;
-            font-size: 14px;
-            font-weight: 200;
-            text-transform: uppercase;
-            display: flex;
-            .img_basket {
-              height: 38px;
-              width: 58px;
-              margin-top: 5px;
-              
-            }
-            .text_basket {
-              margin-top: 15px;
-              color: #ffffff;
-              font-size: 14px;
-              margin-bottom: 12px;
-              margin-left: 5px;
-              
-            }
-          }
-          .shopping-backet:hover .text_basket {
-            cursor: pointer;
-            color: rgb(255, 176, 5);
-          }
-          .shopping-backet:hover .img_basket {
-            cursor: pointer;
-            background: rgb(255, 176, 5);
-            border: 2px solid rgb(78, 77, 77);
-            border-radius: 50%;
-            padding: 0;
-          }
+          margin-right: -10px; 
         }
       }
+      
+      
     }    
   }
 }
 
-@media (min-width: 317px) and (max-width: 379px) {
+@media (min-width: 307px) and (max-width: 379px) {
   body {
     header {
       .headerOne {
         .wrapper {
-          // margin: 200px auto;
-          // width: 200px;
           
           /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
           background: rgb(181,189,200); /* Old browsers */
@@ -553,6 +410,7 @@ body {
             margin-left: 10px; 
           } 
           .burger_line {
+            display: block;
             position: absolute;
             top: 7px;
             right: 10px;
@@ -584,10 +442,7 @@ body {
             transition: .5s all;
             width: 200px;
             .mobile-menu-li {
-              // width: 220px;
               text-align: center;
-              // padding-left: -14px;
-              // padding-right: -14px;
               .mobile-menu-a {
                 display: block;
                 width: 100%;
@@ -598,13 +453,6 @@ body {
                 // background: #000;
                 background: #646464;
                 // padding-bottom: 2px;
-              }
-              .mobile-menu-a:hover {
-                font-family: 'K2D', sans-serif;
-                font-weight: 400;
-                color: rgb(7, 253, 220);
-                border-bottom: 4px solid rgb(10, 196, 171); 
-                // padding-bottom: 3px;
               }
             }  
           }
@@ -630,42 +478,168 @@ body {
           }
         }
         .cart-block {
-          // padding: 0px 10px 0px 1px;
-          // margin-right: -10px;
           .shopping-backet {
-            // color: #ffffff;
-            // text-transform: uppercase;
-            // text-decoration: none;
-            // font-family: 'K2D', sans-serif;
-            // font-size: 14px;
-            // font-weight: 200;
-            // text-transform: uppercase;
-            // display: flex;
-            .img_basket {
-              // height: 38px;
-              // width: 58px;
-              // margin-top: 5px;
-              
-            }
             .text_basket {
-              
-              // margin-top: 15px;
-              // color: #ffffff;
-              // font-size: 14px;
-              // padding-right: -8px;
               display: none; /////////////
             }
-          }
-          // .shopping-backet:hover {
-          //   cursor: pointer;
-          //   color: rgb(255, 176, 5);
-          // }
-          // .shopping-backet:hover .img_basket {
+          } 
+        }
+      }
+      .headerTwo {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        justify-content: space-between;
+        min-height: 260px;
+        width: 100%;
+        max-width: 1260px;
+        background-image: url("/images/11.png");
+        background-size: cover;
+        padding: 0px 0px 0px 0px;
+        #search_contact {
+          margin-left: auto;
+          width: 200px;/////////////////////////////////////////////////////////
+          height: 40px;
+          
+          // background: #646464;
+          // border-left: 2px solid black; 
+          // border-bottom: 2px solid black ;
+          .search_contact_phone_email {
+            // display: flex;
+            display: block;//////////////////////////////////////////////////////
+            align-items: center;
+            justify-content: center;
+            margin-top: 8px;
             
-          //   border: 2px solid red;
-          //   border-radius: 50%;
-          //   padding: 0;
-          // }
+            
+            .phone {
+              
+              // background: #646464;
+              a {
+                font-family: 'K2D', sans-serif;
+                font-size: 18px;
+                font-weight: 900;
+                color: rgb(255, 0, 0);
+                text-shadow: 1px 1px 0 #ffffff, -1px -1px 0 #ffffff,1px -1px 0 #ffffff, -1px 1px 0 #ffffff;
+                text-decoration: none;
+                padding: 10px;
+              }    
+            }
+            .email {
+              
+              // background: #646464;
+              a {
+                font-family: 'K2D', sans-serif;
+                font-size: 18px;
+                font-weight: 900;
+                color: rgb(255, 176, 5);
+                text-shadow: 1px 1px 0 #000000, -1px -1px 0 #000000,1px -1px 0 #000000, -1px 1px 0 #000000;
+                text-decoration: none;
+                padding: 10px;
+              } 
+            }
+          }
+        }
+        #logo {
+          margin-right: auto;
+          margin-left: 30px;
+         
+          .logo_a {  
+            text-decoration: none;
+            .title {
+              font-family: 'K2D', sans-serif;
+              color: #FFFFFF;
+              letter-spacing: 1px;
+              // background: #33cc66;
+              .logoTitleText_h1 {
+                // background-image: url("https://media0.giphy.com/media/eprnXWC1PLbrO/200w.webp?cid=ecf05e4766a07a8efbf760d33916daa3d2969cda69e31bac&rid=200w.webp");
+                // // background-size: cover;
+                // color: transparent;
+                // -moz-background-clip: text;
+                // -webkit-background-clip: text;
+                text-transform: uppercase;
+                font-size: 70px;
+                line-height: 0.75;
+                padding:  5px;
+                margin: 10px 0;
+                font-weight: 800;
+                color: rgb(255, 176, 5);
+                text-shadow: 1px 1px 0 #070707, -1px -1px 0 #080808,1px -1px 0 #070707, -1px 1px 0 #070707;
+              }
+              .logoTitleText_h6 {
+                // background-image: url("https://media0.giphy.com/media/eprnXWC1PLbrO/200w.webp?cid=ecf05e4766a07a8efbf760d33916daa3d2969cda69e31bac&rid=200w.webp");
+                // // background-size: cover;
+                // color: transparent;
+                // -moz-background-clip: text;
+                // -webkit-background-clip: text;
+                text-transform: uppercase;
+                font-size: 19px;
+                line-height: 0.75;
+                padding: 5px;
+                margin: 10px 0;
+                font-weight: 900;
+                color: rgb(253, 27, 27);
+                text-shadow: 1px 1px 0 #ffffff, -1px -1px 0 #ffffff,1px -1px 0 #ffffff, -1px 1px 0 #ffffff;
+               
+              }
+            }
+          }
+        }
+        
+        #search_search {
+          margin-left: auto;
+          width: 315px;////////////////////////////////////////////////
+          height: 40px;
+          // background: #646464;
+          // border-left: 2px solid black; 
+          // border-top: 2px solid black ;
+          .search-box {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 6px;
+            .search-txt {
+              width: 250px;
+              float: left;
+              padding: 3px;
+              font-size: 17px;
+              border-radius: 5px;
+              border: 2px solid rgb(0, 0, 0);
+              background-color: white;
+              max-width: 280px;  
+            }
+            .search-btn {
+              width: 40px;
+              height: 30px;
+              float: left;
+              padding: 3px;
+              font-size: 17px;
+              background-color: rgb(96, 98, 98);
+              color: #ffffff;
+              border-radius: 5px;
+              border: 2px solid rgb(0, 0, 0);
+              margin-left: 1px;
+              // border-left: none;
+              .fas {
+                padding: 0;
+                margin: 0;
+                margin-top: 2px;
+              }
+            }
+            .search-btn:hover {
+              background-color: rgb(255, 176, 5);
+              color: #3f3f3f;
+              border: 2px solid rgb(0, 0, 0);
+              cursor: pointer;
+              // border-left: none;
+            }
+          }
+          .search-box::after {
+            content: "";
+            clear: both;
+            display: table;
+          }
         }
       }
     }  
