--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -26,7 +26,7 @@ body {
     .headerOne {
       display: flex;
       justify-content: space-around;
-      // flex-wrap: nowrap;
+      
       align-items: center;
       height: 40px;
       width: 100%;
@@ -52,7 +52,7 @@ body {
         .check-menu-label {
           display: none;
         } 
-        .burgerLine {
+        .burger_line {////////////////////?????????????????
           display: none;
         }
         .main-menu {
@@ -60,7 +60,7 @@ body {
           // background: yellowgreen;
           list-style: none;
           text-transform: uppercase;
-          // display: flex;
+          
           padding: 0;
           display: flex;
           justify-content: space-between;
@@ -95,35 +95,6 @@ body {
           
         }
       }
-      // .headerOneMenu {
-      //   width: 480px;
-      //   // background: yellowgreen;
-      //   list-style: none;
-      //   text-transform: uppercase;
-      //   display: flex;
-      //   padding: 0;
-      //   justify-content: space-between;
-      //   li {
-      //     // padding-left: 14px;
-      //     // padding-right: 14px;
-      //     a {
-      //       color: #FFFFFF;
-      //       font-size: 14px;
-      //       text-decoration: none;
-      //       font-family: 'K2D', sans-serif;
-      //       font-weight: 400;
-      //       padding: 5px;
-      //       // background: red; 
-      //     }
-      //     a:hover {
-      //       font-family: 'K2D', sans-serif;
-      //       font-weight: 400;
-      //       color: rgb(7, 253, 220);
-      //       border-bottom: rgb(7, 253, 220) solid 2px;
-      //       padding-bottom: 3px;
-      //     }
-      //   }
-      // }
       .language_selection {
          /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
         background: rgb(181,189,200); /* Old browsers */
@@ -196,37 +167,11 @@ body {
         align-items: center;
         justify-content: space-between;
         padding: 0px 10px 0px 10px;
-
-        // .cart {
-        //   margin-top: -4px;
-        //   .shopping-backet {
-        //     color: #ffffff;
-        //     text-transform: uppercase;
-        //     text-decoration: none;
-        //     font-family: 'K2D', sans-serif;
-        //     font-size: 14px;
-        //     font-weight: 200;
-        //     text-transform: uppercase;
-        //     .fas {
-        //       color: #ffffff;
-        //       font-size: 24px;
-        //       padding-right: 5px;
-        //     }
-        //   }
-        //   .shopping-backet:hover {
-        //     cursor: pointer;
-        //     color: rgb(255, 176, 5);
-        //   }
-        //   .shopping-backet:hover .fas {
-        //     cursor: pointer;
-        //     color: rgb(255, 176, 5);
-        //   }
-        // }
         .cart {
           margin-top: -4px;
           .shopping-backet {
             color: #ffffff;
-            text-transform: uppercase;
+            // text-transform: uppercase;
             text-decoration: none;
             font-family: 'K2D', sans-serif;
             font-size: 14px;
@@ -358,45 +303,7 @@ body {
           }
         }
       }
-      // #search_contact {
-        
-      //   width: 370px;
-      //   height: 40px;
-      //   background: rebeccapurple;
-      //   .search_contact_phone_email {
-      //     display: flex;
-      //     align-items: center;
-      //     justify-content: center;
-      //     margin-top: 7px;
-          
-      //     .phone {
-            
-      //       background: #aaa1a1;
-      //       a {
-      //         font-family: 'K2D', sans-serif;
-      //         font-size: 18px;
-      //         font-weight: 500;
-      //         color: rgb(5, 231, 201);
-      //         text-shadow: 1px 1px 0 #000000, -1px -1px 0 #000000,1px -1px 0 #000000, -1px 1px 0 #000000;
-      //         text-decoration: none;
-      //         padding: 10px;
-      //       }    
-      //     }
-      //     .email {
-            
-      //       background: #aaa1a1;
-      //       a {
-      //         font-family: 'K2D', sans-serif;
-      //         font-size: 18px;
-      //         font-weight: 400;
-      //         color: rgb(0, 253, 220);
-      //         text-shadow: 1px 1px 0 #000000, -1px -1px 0 #000000,1px -1px 0 #000000, -1px 1px 0 #000000;
-      //         text-decoration: none;
-      //         padding: 10px;
-      //       } 
-      //     }
-      //   }
-      // }
+      
       #search_search {
         margin-left: auto;
         width: 370px;
@@ -452,48 +359,7 @@ body {
         }
       }
     }
-    // .headerThree {
-    //   display: flex;
-    //   justify-content: space-around;
-    //   align-items: center;
-    //   height: 35px;
-    //   width: 100%;
-    //   max-width: 1260px;
-    //   background: #646464;
-    //   // border-top: 2px solid rgb(0, 0, 0);
-    //   .headerThreeMenu {
-    //     width: 1000px;
-    //     // background: yellowgreen;
-    //     list-style: none;
-    //     text-transform: uppercase;
-    //     padding: 0;
-    //     display: flex;
-    //     // text-align: center;
-    //     // justify-content: center;
-        
-    //     justify-content: space-around;
-    //     li {
-    //       // padding-left: 12px;
-    //       // padding-right: 12px;
-    //       a {
-    //         color: #FFFFFF;
-    //         font-size: 14px;
-    //         text-decoration: none;
-    //         font-family: 'K2D', sans-serif;
-    //         font-weight: 400;
-    //         padding: 5px;
-    //         // background: red; 
-    //       }
-    //       a:hover {
-    //         font-family: 'K2D', sans-serif;
-    //         font-weight: 400;
-    //         color: rgb(7, 253, 220);
-    //         border-bottom: rgb(7, 253, 220) solid 2px;
-    //         padding-bottom: 3px;
-    //       }
-    //     }
-    //   }
-    // }
+    
     .header-www {
       display: flex;
       // justify-content: space-around;
@@ -589,7 +455,7 @@ body {
       //   border-right: 1px solid #babbbb;
       // }
       .dws-menu li a:hover {
-        background: rgb(192, 129, 236); /////////////////////
+        // background: rgb(192, 129, 236); /////////////////////
 
         /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+0,e5e5e5+100;White+3D */
         background: rgb(255,255,255); /* Old browsers */
@@ -612,12 +478,21 @@ body {
         
       }
       .dws-menu li > ul li {
-        border: 1px solid #c7c8ca;
+        border: 1px solid #b8b8b8;
       }
       .dws-menu li > ul li a {
         padding: 10px ;
         text-transform: none;
-        background: rgb(107, 109, 107);
+        // background: rgb(107, 109, 107);
+        // background: rebeccapurple;
+
+        /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
+        background: rgb(181,189,200); /* Old browsers */
+        background: -moz-linear-gradient(top,  rgba(181,189,200,1) 1%, rgba(181,189,200,1) 3%, rgba(48,54,58,1) 60%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
+       
        
       }
       .dws-menu li > ul li ul {
